Fixes bug 81273 "infinite recursion when clicking URL with unknown server" r=gagan; sr=bienvenu,dougt